# ETL-MOVIES

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sql/: analytics.sql  schema.sql
src/etl_movies/: cli.py  config.py  db.py  extract.py  load.py  transform.py
tests/: test_settings.py
